--- a/frmBackUp.resx
+++ b/frmBackUp.resx
@@ -117,4 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="label2.Text" xml:space="preserve">
+    <value>Esta herramienta creará una copia de seguridad completa de la base de datos (DB_BEAN). 
+El archivo generado (.bak) contiene toda la información necesaria para restaurar el sistema a su estado actual. 
+Guarde este archivo en un lugar seguro</value>
+  </data>
 </root>
